move index.html

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,20 +7,19 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="">
   <meta name="author" content="">
-  <link rel="shortcut icon" href="assets/img/calendar-white.png">
+  <link rel="shortcut icon" href="../static/assets/img/calendar-white.png">
 
   <title>Frienduler</title>
 
   <!-- Bootstrap core CSS -->
-  <link href="assets/css/bootstrap.css" rel="stylesheet">
+  <link href="../static/assets/css/bootstrap.css" rel="stylesheet">
 
   <!-- Custom styles for this template -->
-  <link href="assets/css/landingpage.css" rel="stylesheet">
-  <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+  <link href="../static/assets/css/landingpage.css" rel="stylesheet">
+  <link rel="stylesheet" href="../static/assets/css/font-awesome.min.css">
 
-  <script src="assets/js/jquery.min.js"></script>
-  <script src="assets/js/modernizr.custom.js"></script>
-
+  <script src="../static/assets/js/jquery.min.js"></script>
+  <script src="../static/assets/js/modernizr.custom.js"></script>
 
 
   <link href='http://fonts.googleapis.com/css?family=Oswald:400,300,700' rel='stylesheet' type='text/css'>
@@ -38,7 +37,7 @@
 <!-- Menu -->
 <nav class="menu" id="theMenu">
   <div class="menu-wrap">
-    <h1 class="logo"><a href="./">Frienduler</a></h1>
+    <h1 class="logo"><a href="../static">Frienduler</a></h1>
     <i class="icon-remove menu-close"></i>
     <a href="#home" class="smoothScroll">Home</a>
     <a href="#login" class="smoothScroll">Login</a>
@@ -54,7 +53,7 @@
   <div id="headerwrap">
     <div class="container">
       <div class="logo">
-        <img src="assets/img/calendar-white.png" width="80" height="71">
+        <img src="../static/assets/img/calendar-white.png" width="80" height="71">
       </div>
       <div class="row">
         <h1>
@@ -94,6 +93,9 @@
         <p>A web service created by five students at Cal Poly Pomona to store schedules and generate times where friends can hang out, so they don't have to figure it out themselves.</p>
         <h1>How do I log in?</h1>
         <p>Simply enter your username in the box above.</p>
+        <h1>Why can't I see my events?
+        These events shown aren't mine.</h1>
+        <p>Check to make sure that you entered the correct user ID, case sensitive.</p>
         <h1>When is Frienduler going to be finished?</h1>
         <p>Hopefully before week 10, am I right?</p>
 		<br>
@@ -115,9 +117,9 @@
 <!-- Bootstrap core JavaScript
 ================================================== -->
 <!-- Placed at the end of the document so the pages load faster -->
-<script src="assets/js/classie.js"></script>
-<script src="assets/js/bootstrap.min.js"></script>
-<script src="assets/js/smoothscroll.js"></script>
-<script src="assets/js/main.js"></script>
+<script src="../static/assets/js/classie.js"></script>
+<script src="../static/assets/js/bootstrap.min.js"></script>
+<script src="../static/assets/js/smoothscroll.js"></script>
+<script src="../static/assets/js/main.js"></script>
 </body>
 </html>
