--- a/src/main/resources/static/assets/css/landingpage.css
+++ b/src/main/resources/static/assets/css/landingpage.css
@@ -22,7 +22,7 @@ body {
 h1, h2, h3, h4, h5, h6 {
     font-family: 'Oswald', sans-serif;
     font-weight: 300;
-    color: #FFFAA;
+    color: #e8e6ff;
 }
 
 
