--- a/src/main/resources/static/assets/css/tealBody.css
+++ b/src/main/resources/static/assets/css/tealBody.css
@@ -3,13 +3,13 @@ section {
    margin: 50px;
 }
  table{
-    width:50%;
+    width:100%;
     table-layout: fixed;
   }
   .inlineTable{
-  	dispaly: inline-block;
+  	display: inline-block;
   	}
-  	
+
   h1{
     font-size: 30px;
     color: #fff;
@@ -33,17 +33,17 @@ section {
     text-align: left;
     font-weight: 500;
     font-size: 12px;
-    color: rgba(20,57,78,1);
+    color: rgb(20, 57, 78);
     text-transform: uppercase;
   }
   td{
-    padding: 15px;
+    padding: 20px 15px;
     text-align: left;
     vertical-align:middle;
     font-weight: 300;
     font-size: 12px;
     color: #fff;
-    border-bottom: solid 1px rgba(255,255,255,0.1);
+    border-bottom: solid 1px rgba(255,255,255,0.3);
   }
 
 
@@ -58,4 +58,3 @@ section {
   section{
     margin: 50px;
   }
-  	
