--- a/src/main/resources/static/assets/css/tealBody.css
+++ b/src/main/resources/static/assets/css/tealBody.css
@@ -18,6 +18,13 @@ section {
     text-align: center;
     margin-bottom: 15px;
   }
+  h2 {
+    font-size: 25px;
+    color: #ffffff;
+    font-weight: 300;
+    text-align: center;
+    margin-bottom: 15px;
+  }
   .tbl-header{
     background-color: rgba(255,255,255,0.3);
   }
