--- a/src/main/resources/static/assets/css/tealBody.css
+++ b/src/main/resources/static/assets/css/tealBody.css
@@ -1,49 +1,49 @@
 
 section {
-   margin: 50px;
+    margin: 50px;
 }
- table{
+table{
     width:100%;
     table-layout: fixed;
-  }
-  .inlineTable{
-  	display: inline-block;
-  	}
+}
+.inlineTable{
+    display: inline-block;
+}
 
-  h1{
+h1{
     font-size: 30px;
     color: #fff;
     text-transform: uppercase;
     font-weight: 300;
     text-align: center;
     margin-bottom: 15px;
-  }
-  h2 {
+}
+h2 {
     font-size: 25px;
     color: #ffffff;
     font-weight: 300;
     text-align: center;
     margin-bottom: 15px;
-  }
-  .tbl-header{
+}
+.tbl-header{
     background-color: rgba(255,255,255,0.3);
-  }
-  .tbl-content{
+}
+.tbl-content{
     height:300px;
     overflow-x:auto;
     margin-top: 0px;
     border: 1px solid rgba(255,255,255,0.3);
     background-color: rgba(0,0,0,.6);
-  }
-  th{
+}
+th{
     padding: 20px 15px;
     text-align: left;
     font-weight: 500;
     font-size: 12px;
     color: rgb(20, 57, 78);
     text-transform: uppercase;
-  }
-  td{
+}
+td{
     padding: 20px 15px;
     text-align: left;
     vertical-align:middle;
@@ -51,17 +51,57 @@ section {
     font-size: 12px;
     color: #fff;
     border-bottom: solid 1px rgba(255,255,255,0.3);
-  }
+}
 
 
-  /* demo styles */
+/* demo styles */
 
-  @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
-  body{
+@import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
+body{
     background: -webkit-linear-gradient(left, #25c481, #25b7c4);
     background: linear-gradient(to right, #25c481, #25b7c4);
     font-family: 'Roboto', sans-serif;
-  }
-  section{
+}
+section{
     margin: 50px;
-  }
+}
+
+.sidenav {
+    height: 100%;
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    top: 0;
+    right: 0;
+    background-color: #111;
+    overflow-x: hidden;
+    transition: 0.5s;
+    padding-top: 60px;
+}
+
+.sidenav a {
+    padding: 8px 8px 8px 32px;
+    text-decoration: none;
+    font-size: 15px;
+    color: #818181;
+    display: block;
+    transition: 0.3s;
+    font-family: 'Roboto', sans-serif;
+}
+
+.sidenav a:hover {
+    color: #f1f1f1;
+}
+
+.sidenav .closebtn {
+    position: absolute;
+    top: 0;
+    right: 25px;
+    font-size: 36px;
+    margin-right: 50px;
+}
+
+@media screen and (max-height: 450px) {
+    .sidenav {padding-top: 15px;}
+    .sidenav a {font-size: 18px;}
+}
