--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -39,9 +39,9 @@
   <div class="menu-wrap">
     <h1 class="logo"><a href="../static">Frienduler</a></h1>
     <i class="icon-remove menu-close"></i>
-    <a href="#home" class="smoothScroll">Home</a>
-    <a href="#login" class="smoothScroll">Login</a>
-    <a href="#faq" class="smoothScroll">FAQ</a>
+    <a href="/" class="smoothScroll">Home</a>
+    <a href="/" class="smoothScroll">Login</a>
+    <a href="/" class="smoothScroll">FAQ</a>
   </div>
 
   <!-- Menu button -->
