--- a/src/main/resources/static/js/tealBody.css
+++ b/src/main/resources/static/js/tealBody.css
@@ -9,6 +9,10 @@ section {
     width:100%;
     table-layout: fixed;
   }
+  table2{
+    width:50%;
+    table-layout: fixed;
+  }
   .inlineTable{
   	dispaly: inline-block;
   	}
@@ -31,6 +35,7 @@ section {
     border: 1px solid rgba(255,255,255,0.3);
     background-color: rgba(0,0,0,.6);
   }
+
   th{
     padding: 20px 15px;
     text-align: left;
@@ -52,13 +57,16 @@ section {
 
   /* demo styles */
 
-  @import url(https://fonts.googleapis.com/css?family=Roboto:400,500,300,700);
-  body{
-    background: -webkit-linear-gradient(left, #25c481, #25b7c4);
-    background: linear-gradient(to right, #25c481, #25b7c4);
-    font-family: 'Roboto', sans-serif;
+ 
+  body {
+    min-height:100%;
+  	background:linear-gradient(90deg,rgba(37,196,129,0.5),rgba(0,128,255,0.5)),url(../js/Hiking.jpeg);
+ 	background-size:cover;
+ 
+ 	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+	text-align: center;
   }
-  section{
-    margin: 50px;
-  }
+
 
