--- a/src/main/resources/static/js/tooplate-style.css
+++ b/src/main/resources/static/js/tooplate-style.css
@@ -7,14 +7,14 @@ http://www.tooplate.com/view/2093-flight
 */
 
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Open Sans', arial, sans-serif;
+	margin: 0;
+	padding: 0;
+	font-family: 'Open Sans', arial, sans-serif;
 }
 
 body {
 	overflow-x: hidden;
-	background-color: #fff;
+	background-color: #111;
 }
 
 ul {
@@ -74,60 +74,60 @@ p {
 }
 
 .owl-pagination {
-  margin-top: -95px;
-  opacity: 1;
-  display: inline-block;
-  position: absolute;
-  right: 0px;
-  z-index: 9999;
-  background-color: rgba(255, 255, 255, 0.25);
-  height: 80px;
-  line-height: 80px;
-  padding: 0px 15px;
+	margin-top: -95px;
+	opacity: 1;
+	display: inline-block;
+	position: absolute;
+	right: 0px;
+	z-index: 9999;
+	background-color: rgba(255, 255, 255, 0.25);
+	height: 80px;
+	line-height: 80px;
+	padding: 0px 15px;
 }
 
 .owl-page span {
-  display: block;
-  width: 10px;
-  height: 10px;
-  margin: 0px 5px;
-  filter: alpha(opacity=50);
-  opacity: 0.5;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  border-radius: 20px;
-  background: #ffe165;
+	display: block;
+	width: 10px;
+	height: 10px;
+	margin: 0px 5px;
+	filter: alpha(opacity=50);
+	opacity: 0.5;
+	-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;
+	border-radius: 20px;
+	background: #ffe165;
 }
 
 .banner .social-links {
-  list-style: none;
-  margin-top: 0px;
-  padding-right: 100px;
+	list-style: none;
+	margin-top: 0px;
+	padding-right: 100px;
 }
 
 .banner .social-links li {
-  display: block;
-  text-align: center;
-  margin: 10px 0px;
-  transition: all 0.5s;
+	display: block;
+	text-align: center;
+	margin: 10px 0px;
+	transition: all 0.5s;
 }
 
 .banner .social-links a {
-  display:block;
-  transition: all 0.5s;
-  text-align: left;
-  text-decoration:none;
-  text-transform:uppercase;
-  letter-spacing: 0.5px;
-  color:#fff;
-  font-size: 17px;
-  font-weight: 400;
-  display: inline-block;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-  padding-left: 20px;
-  background-color: rgba(250, 250, 250, 0.1);
+	display:block;
+	transition: all 0.5s;
+	text-align: left;
+	text-decoration:none;
+	text-transform:uppercase;
+	letter-spacing: 0.5px;
+	color:#fff;
+	font-size: 17px;
+	font-weight: 400;
+	display: inline-block;
+	width: 100%;
+	height: 60px;
+	line-height: 60px;
+	padding-left: 20px;
+	background-color: rgba(250, 250, 250, 0.1);
 }
 
 .banner .social-links a em {
@@ -146,22 +146,22 @@ p {
 }
 
 .banner .social-links li:hover {
-  background-color: rgba(255, 225, 101, 0.5);
+	background-color: rgba(255, 225, 101, 0.5);
 }
 
 .banner .social-links li:hover i {
-  background-color: rgba(255, 225, 101, 0.3);
+	background-color: rgba(255, 225, 101, 0.3);
 }
 
 
 .banner {
-	
-	
-  min-height:100%;
-  background:linear-gradient(90deg,rgba(37,196,129,0.5),rgba(0,128,255,0.5)),url(../js/party.jpg);
-  background-size:cover;
- 
- 	background-repeat: no-repeat;
+
+
+	min-height:100%;
+	background:linear-gradient(90deg,rgba(37,196,129,0.5),rgba(0,128,255,0.5)),url(../js/party.jpg);
+	background-size:cover;
+
+	background-repeat: no-repeat;
 	background-size: cover;
 	background-position: center center;
 	text-align: center;
@@ -293,16 +293,16 @@ p {
 }
 
 #weather .tabs {
-  list-style: none;
-  margin-top: 0px;
-  padding-right: 0px;
-  background-color: rgba(31, 54, 70, 0.5);}
+	list-style: none;
+	margin-top: 0px;
+	padding-right: 0px;
+	background-color: rgba(31, 54, 70, 0.5);}
 
 #weather .tabs li {
-  display: inline-block;
-  text-align: center;
-  margin: 0px -2px;
-  width: 20%;
+	display: inline-block;
+	text-align: center;
+	margin: 0px -2px;
+	width: 20%;
 }
 
 #weather .tabs li:last-child {
@@ -310,21 +310,21 @@ p {
 }
 
 #weather .tabs a {
-  display:block;
-  transition: all 0.5s;
-  text-align: left;
-  text-decoration:none;
-  text-transform:uppercase;
-  letter-spacing: 0.5px;
-  color:#fff;
-  font-size: 15px;
-  font-weight: 700;
-  display: inline-block;
-  width: 100%;
-  height: 80px;
-  line-height: 80px;
-  padding-left: 0px;
-  text-align: center;
+	display:block;
+	transition: all 0.5s;
+	text-align: left;
+	text-decoration:none;
+	text-transform:uppercase;
+	letter-spacing: 0.5px;
+	color:#fff;
+	font-size: 15px;
+	font-weight: 700;
+	display: inline-block;
+	width: 100%;
+	height: 80px;
+	line-height: 80px;
+	padding-left: 0px;
+	text-align: center;
 }
 
 #weather .tabs a em {
@@ -333,7 +333,7 @@ p {
 }
 
 #weather .tabs .active {
-  background-color: #ffe165;
+	background-color: #ffe165;
 }
 
 #weather .weather-item {
@@ -357,7 +357,7 @@ p {
 
 .weather-item .weather-icon {
 	display: inline-block;
-	margin-bottom: 40px;	
+	margin-bottom: 40px;
 	width: 64px;
 	height: 64px;
 }
@@ -466,9 +466,9 @@ p {
 }
 
 #recommended-hotel .tabs {
-  list-style: none;
-  margin-top: 0px;
-  padding-right: 0px;
+	list-style: none;
+	margin-top: 0px;
+	padding-right: 0px;
 }
 
 #recommended-hotel .tabs li:first-child {
@@ -476,27 +476,27 @@ p {
 }
 
 #recommended-hotel .tabs li {
-  display: block;
-  text-align: center;
-  margin: 8px 0px;
+	display: block;
+	text-align: center;
+	margin: 8px 0px;
 }
 
 #recommended-hotel .tabs a {
-  display:block;
-  transition: all 0.5s;
-  text-align: left;
-  text-decoration:none;
-  text-transform:uppercase;
-  letter-spacing: 0.5px;
-  color:#fff;
-  font-size: 17px;
-  font-weight: 700;
-  display: inline-block;
-  width: 100%;
-  height: 60px;
-  line-height: 60px;
-  padding-left: 20px;
-  background-color: #1f3646;
+	display:block;
+	transition: all 0.5s;
+	text-align: left;
+	text-decoration:none;
+	text-transform:uppercase;
+	letter-spacing: 0.5px;
+	color:#fff;
+	font-size: 17px;
+	font-weight: 700;
+	display: inline-block;
+	width: 100%;
+	height: 60px;
+	line-height: 60px;
+	padding-left: 20px;
+	background-color: #1f3646;
 }
 
 #recommended-hotel .tabs a em {
@@ -515,12 +515,12 @@ p {
 }
 
 #recommended-hotel .tabs .active {
-  background-color: #ffe165;
-  color: #121212;
+	background-color: #ffe165;
+	color: #121212;
 }
 
 #recommended-hotel .tabs .active i {
-  background-color: rgba(255, 255, 255, 0.3);
+	background-color: rgba(255, 255, 255, 0.3);
 }
 
 .recommendedgroup img {
@@ -711,37 +711,37 @@ p {
 }
 
 #owl-mostvisited .owl-pagination {
-  margin-top: 20px;
-  opacity: 1;
-  display: inline-block;
-  position: relative;
-  text-align: center;
-  z-index: 9999;
-  background-color: transparent;
-  height: 0px;
-  line-height: 0px;
-  padding: 0px;
+	margin-top: 20px;
+	opacity: 1;
+	display: inline-block;
+	position: relative;
+	text-align: center;
+	z-index: 9999;
+	background-color: transparent;
+	height: 0px;
+	line-height: 0px;
+	padding: 0px;
 }
 
 #owl-mostvisited .owl-page span {
-  display: block;
-  width: 10px;
-  height: 10px;
-  margin: 0px 5px;
-  filter: alpha(opacity=50);
-  opacity: 0.5;
-  -webkit-border-radius: 20px;
-  -moz-border-radius: 20px;
-  border-radius: 20px;
-  background: #ddd;
+	display: block;
+	width: 10px;
+	height: 10px;
+	margin: 0px 5px;
+	filter: alpha(opacity=50);
+	opacity: 0.5;
+	-webkit-border-radius: 20px;
+	-moz-border-radius: 20px;
+	border-radius: 20px;
+	background: #ddd;
 }
 
 #owl-mostvisited .owl-controls .owl-page.active span,
 #owl-mostvisited .owl-controls.clickable .owl-page:hover span{
-  filter: Alpha(Opacity=100);/*IE7 fix*/
-  opacity: 1;
-  display: inline-block;
-  background: #ffe165;
+	filter: Alpha(Opacity=100);/*IE7 fix*/
+	opacity: 1;
+	display: inline-block;
+	background: #ffe165;
 }
 
 
@@ -787,7 +787,7 @@ footer .social-icons li a:hover {
 footer p {
 	color: #fff;
 	font-size: 12px;
-	margin-top: 40px; 	
+	margin-top: 40px;
 }
 
 footer p em {
@@ -927,10 +927,10 @@ footer p em {
 	}
 
 	.banner .social-links {
-	  list-style: none;
-	  margin-top: 0px;
-	  padding-right: 15px;
-	  padding-left: 15px;
+		list-style: none;
+		margin-top: 0px;
+		padding-right: 15px;
+		padding-left: 15px;
 	}
 
 	.banner .page-direction-button {
@@ -958,15 +958,15 @@ footer p em {
 	}
 
 	#weather .tabs a {
-	  display:block;
-	  color:#fff;
-	  font-size: 13px;
-	  display: block;
-	  width: 100%;
-	  height: 60px;
-	  line-height: 60px;
-	  padding-left: 0px;
-	  text-align: center;
+		display:block;
+		color:#fff;
+		font-size: 13px;
+		display: block;
+		width: 100%;
+		height: 60px;
+		line-height: 60px;
+		padding-left: 0px;
+		text-align: center;
 	}
 
 	#weather .weather-item {
@@ -978,7 +978,7 @@ footer p em {
 	}
 
 	.service-item {
-		margin: 30px 0px; 
+		margin: 30px 0px;
 	}
 
 	.page-heading .logo {
@@ -1011,13 +1011,13 @@ footer p em {
 	footer ul li {
 		margin-bottom: 10px!important;
 	}
-		
+
 }
 
 @media (max-width: 768px) {
 
 
-	
+
 }
 
 @media (max-width: 480px) {
