--- a/src/main/resources/static/js/tealBody.css
+++ b/src/main/resources/static/js/tealBody.css
@@ -60,7 +60,16 @@ body{
 section{
     margin: 50px;
 }
-
+.sexy-body {
+    min-height:100%;
+  	background:linear-gradient(90deg,rgba(37,196,129,0.5),rgba(0,128,255,0.5)),url(../js/desk.jpg);
+ 	background-size:cover;
+ 
+ 	background-repeat: no-repeat;
+	background-size: cover;
+	background-position: center center;
+	text-align: center;
+  }
 
 .pritty-body {
     min-height:100%;
