--- a/src/main/resources/static/assets/css/tealBody.css
+++ b/src/main/resources/static/assets/css/tealBody.css
@@ -105,3 +105,36 @@ section{
     .sidenav {padding-top: 15px;}
     .sidenav a {font-size: 11px;}
 }
+
+.sexy-body {
+    min-height:100%;
+    background:linear-gradient(90deg,rgba(37,196,129,0.5),rgba(0,128,255,0.5)),url(../js/desk.jpg);
+    background-size:cover;
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    text-align: center;
+}
+
+.pritty-body {
+    min-height:100%;
+    background:linear-gradient(90deg,rgba(37,196,129,0.5),rgba(0,128,255,0.5)),url(../js/Hiking.jpeg);
+    background-size:cover;
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    text-align: center;
+}
+
+.natural-body {
+    min-height:100%;
+    background:linear-gradient(90deg,rgba(37,196,129,0.5),rgba(0,128,255,0.5)),url(../img/nature.jpg);
+    background-size:cover;
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    text-align: center;
+}
