--- a/src/main/resources/static/js/tealBody.css
+++ b/src/main/resources/static/js/tealBody.css
@@ -82,6 +82,17 @@ section{
 	text-align: center;
   }
 
+.natural-body {
+    min-height:100%;
+    background:linear-gradient(90deg,rgba(37,196,129,0.5),rgba(0,128,255,0.5)),url(../assets/img/nature.jpg);
+    background-size:cover;
+
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center center;
+    text-align: center;
+}
+
 
 .sidenav {
     height: 100%;
