--- a/src/main/resources/static/js/tealBody.css
+++ b/src/main/resources/static/js/tealBody.css
@@ -20,6 +20,37 @@ h1{
     text-align: center;
     margin-bottom: 15px;
 }
+.buttoner{
+	
+	border:none;
+	border-style:none;
+	padding:10px 27px;
+	background-color: #ffe165;
+	color: #121212;
+	text-align: center;
+	text-decoration: none;
+	cursor:pointer;
+}
+
+.pritty-body .page-direction-button a {
+	display: block;
+	margin:0 auto;
+	margin-top:200px;
+	line-height: 60px;
+	width: 270px;
+	height: 60px;
+	border-top-right-radius: 5px;
+	border-top-left-radius: 5px;
+	background-color: #ffe165;
+	font-size: 18px;
+	font-weight: 700;
+	color: #121212;
+	text-align: center;
+	text-decoration: none;
+	letter-spacing: 0px;
+
+	
+}
 .tbl-header{
     background-color: rgba(255,255,255,0.3);
 }
